tests/errors/macro/macro_is_not_defined.c
#define name 10
#undef name

int main()
{
	print(name);	// идентификатор name неопределен
	return 0;
}
